--- a/style.css
+++ b/style.css
@@ -1,5 +1,39 @@
-.navcontainer{
+.mainnav{
     display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 50px;
+    background-color: black;
+    color: white;
 }
 
-/*background-size: cover;*/
+.logo{
+    height: 50px;
+    margin-: 914px;
+}
+
+.toplink{
+    margin: 0px 20px;
+}
+
+.section{
+    height: 100vh;
+    background-color: black;
+    margin: 0px;
+}
+
+.ginger{
+    background-image: url(https://wallpapers.com/images/high/ginger-cat-pictures-2560-x-1600-gog2ubj1b0t1dpqr.webp);
+    background-size: cover;
+    
+}
+
+.forestcat{
+    background-image: url(https://static.vecteezy.com/system/resources/thumbnails/030/200/734/small_2x/norwegian-forest-cat-exploring-a-snowy-landscape-its-thick-fur-contrasting-with-the-pristine-white-snow-generative-ai-photo.jpg) ;
+    background-size: cover;
+}
+
+.mainecoon{
+    background-image: url(https://images.pexels.com/photos/14639094/pexels-photo-14639094.jpeg) ;
+    background-size: cover;
+}
